# omen

./: .dockerignore  .env.example  .gitignore  AI_OVERVIEW.md  BOLT_MCP.md  Cargo.toml  Dockerfile  GHOSTAI_STACK.md  GHOSTFLOW_RUST_INT.md  GHOSTKELLZ_GAMEPLAN.md  LLM_STREAM_MULTIPLEXER.md  OMEN_LINK.md  OMEN_STATUS.md  OWNERSHIP.md  PROJECTS.md  QUICKSTART.md  RC1_STATUS.md  README.md  RELEASE_v0.1.1_FIXES.md  TODO.md  build.rs  docker-compose.yml  omen.toml  omen.toml.example  test_docker.sh
.github/workflows/: main.yml
examples/: test_embeddings.rs
ghostflow-docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
ghostllm-docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  OPENWEBUI.md  README.md
ghostllm-docs/api/: README.md  chat-completions.md
ghostllm-docs/examples/: README.md
ghostllm-docs/guides/: quickstart.md
ghostllm-docs/integration/: README.md
proto/: omen.proto
src/: auth.rs  billing.rs  cache.rs  config.rs  error.rs  ghost_ai.rs  grpc.rs  lib.rs  main.rs  multiplexer.rs  rate_limiter.rs  router.rs  routing.rs  server.rs  types.rs
src/context/: embeddings.rs  mod.rs  session.rs  workspace.rs
src/providers/: anthropic.rs  azure.rs  bedrock.rs  google.rs  mod.rs  ollama.rs  openai.rs  vertexai.rs  xai.rs
