[package]
name = "omen"
version = "0.1.0"
edition = "2024"
description = "OMEN - Open Model Exchange Network: Universal AI API Gateway"
license = "MIT"
repository = "https://github.com/ghostkellz/omen"
authors = ["CK Technology <contact@cktechx.com>"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["tokio", "json", "tower-log", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async traits and utilities
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# System info
num_cpus = "1.0"

# gRPC support
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"
prost-types = "0.12"

# Stream multiplexing (QUIC support to be added later)
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["full"] }

# Redis caching
redis = { version = "0.24", features = ["tokio-comp", "json"] }

# Future QUIC support (commented out for now due to version conflicts)
# quinn = "0.11"
# h3 = "0.0.8"
# h3-quinn = "0.0.10"
# rustls = "0.23"
# rcgen = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
